Test/git-issues/git-issue-3187c.dfy
// RUN: %exits-with 2 %baredafny verify %args "%s" > "%t"
// RUN: %diff "%s.expect" "%t"

module P {
  class B {
    var z: int = 5
  }
}
